# link-shortener-api

./: .gitignore  Cargo.toml  DOCS.md  LICENSE  README.md  THIRD_PARTY_LICENSES.html  todo.md
migrations/2022-09-17-232926_create_links/: down.sql  up.sql
migrations/2022-09-22-200358_update_link_id_length/: down.sql  up.sql
src/: catchers.rs  config.rs  fairings.rs  guards.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
src/catchers/: mod.rs  root.rs
src/fairings/: database.rs  mod.rs  rate_limit.rs
src/guards/: mod.rs  rate_limit.rs
src/handlers/: bulk.rs  mod.rs  root.rs  utils.rs
src/models/: db_less.rs  mod.rs
src/requests/: mod.rs
src/responses/: errors.rs  mod.rs  new.rs  successes.rs
src/routes/: bulk.rs  mod.rs  root.rs
